[gd_scene load_steps=9 format=3 uid="uid://o4sf24im15s4"]

[ext_resource type="Script" uid="uid://rlu0bcpay2a3" path="res://scripts/crate.gd" id="1_dwt0d"]
[ext_resource type="Texture2D" uid="uid://i3s2k2l360yj" path="res://assets/attic_tileset.png" id="2_kn6iu"]
[ext_resource type="PackedScene" uid="uid://cr2732jbemnja" path="res://scenes/crate_invUI.tscn" id="3_kn6iu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_74u5o"]
atlas = ExtResource("2_kn6iu")
region = Rect2(80, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1kl6c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_74u5o")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pji31"]

[sub_resource type="Gradient" id="Gradient_kn6iu"]
colors = PackedColorArray(0.513726, 1, 1, 0.505882, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_74u5o"]
gradient = SubResource("Gradient_kn6iu")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Crate" type="Area2D"]
z_index = -1
script = ExtResource("1_dwt0d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(8, -8)
sprite_frames = SubResource("SpriteFrames_1kl6c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(8, -8)
shape = SubResource("RectangleShape2D_pji31")

[node name="CrateInvUI" parent="." instance=ExtResource("3_kn6iu")]
visible = false
offset_left = 2.0
offset_top = -13.0
offset_right = 2.0
offset_bottom = -13.0
scale = Vector2(0.25, 0.25)

[node name="Highlight" type="PointLight2D" parent="."]
position = Vector2(8, -8)
scale = Vector2(0.25, 0.25)
texture = SubResource("GradientTexture2D_74u5o")

[connection signal="body_entered" from="." to="." method="_on_crate_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_crate_body_exited"]
